<resources>
    <string name="app_name">NYCU e4</string>

    <!--Main Activity-->
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="logout_confirm">Logging out will erase your current bookmarked courses and download history.
        Continue?
    </string>

    <!--Nav Drawer-->
    <string name="home">Home</string>
    <string name="latest_ann">Announcement</string>
    <string name="download_history">Download History</string>
    <string name="bookmarked_courses">Bookmarked</string>
    <string name="old_e3">Old e3</string>
    <string name="course_list">Course List</string>
    <string name="settings">Settings</string>
    <string name="license">License</string>

    <!--Login Activity-->
    <string name="student_id">Student ID</string>
    <string name="student_old_e3_password">Old E3 Password (Optional)</string>
    <string name="portal_password">NYCU Portal Password</string>
    <string name="login">LogIn</string>
    <string name="logout">Log out</string>
    <string name="login_id_or_password_error">ID or Password incorrect, try again?</string>
    <string name="login_success">Login Success</string>
    <string name="logout_success">Logout Success</string>
    <string name="login_help">Login Help</string>

    <!--Status-->
    <string name="generic_error">Error</string>
    <string name="try_again">Try Again</string>
    <string name="constructing">This place is still under construction.</string>
    <string name="empty_request">There\'s nothing here</string>

    <!--Course Activity-->
    <string name="title_activity_course">CourseActivity</string>
    <string name="course_nav_ann">Ann</string>
    <string name="course_nav_doc">Doc</string>
    <string name="course_nav_assignment">Task</string>
    <string name="course_nav_score">Score</string>
    <string name="course_nav_members">Members</string>
    <string name="course_folder_type_handout">Handout</string>
    <string name="course_folder_type_reference">Reference</string>
    <string name="download_start">Start downloading&#8230;</string>
    <string name="download">Download</string>

    <!--Ann Activity-->
    <string name="title_activity_ann">Announcement</string>
    <string name="action_to_syllabus">Syllabus</string>

    <!--Timetable Activity-->
    <string name="title_timetable">Timetable</string>
    <string name="timetable">Timetable</string>
    <string-array name="timetable_header_title">
        <item></item>
        <item>Mon</item>
        <item>Tue</item>
        <item>Wed</item>
        <item>Thu</item>
        <item>Fri</item>
        <item>Sat</item>
        <item>Sun</item>
    </string-array>

    <!--License-->
    <string name="font_awesome_license">This app uses <a href="https://fontawesome.com/license">Font Awesome</a> icons.
    </string>
    <string name="flat_icon_license">This icon is made by
        <a href="https://www.flaticon.com/authors/freepik">Freepik from Flaticon.</a>
    </string>

    <!--SameFile Alert Dialog-->
    <string name="detect_same_file">There is already a file with the same name under download directory.\nWould you like
        to open the existed one or get the fresh one?
    </string>
    <string name="download_again">Download Again</string>
    <string name="open_existed">Open Existed</string>

    <string name="download_completed">Download Completed</string>
    <string name="open_file">Open</string>

    <!--Title-->
    <string name="title_ann">Announcement</string>

    <!--Home Fragment-->
    <string name="more_ann">More announcement</string>
    <string name="more_download_history">More history</string>
    <string name="more_bookmarked_course">More bookmarked</string>

    <!--Download Fragment-->
    <string name="confirm_delete">Are you sure you want to delete %1s ?</string>
    <string name="delete">Delete</string>
    <string name="rename">Rename</string>
    <string name="share">Share</string>
    <string name="positive">OK</string>

    <string name="cancel">Cancel</string>

    <string name="no_compatible_app">No app can handle this kind of file</string>

    <!--identifier-->
    <string name="action_refresh">Refresh</string>
    <string name="refresh_success">Refresh Success</string>
    <string name="action_goto_course">Goto Course Page</string>
    <string name="wait">Please Wait</string>

    <string name="no_email">no email</string>
    <string name="action_select_all">Select All</string>
    <string name="feedback">Feedback</string>

    <string name="title_activity_assign">Assignment</string>
    <string name="start_time">Start:</string>
    <string name="end_time">End:</string>

    <string name="wrong_credential">Wrong Credentials! Please login again</string>
    <string name="drag_drop_tip">Long press to rearrange items.</string>

    <string name="action_download_assign">Submitted Files</string>
    <string name="no_submitted_assign">No submitted files</string>

    <string name="new_e3_ann_error">Can\'t update new e3 announcements at the moment.\nPull to retry.</string>
    <string name="old_e3_ann_error">Can\'t update old e3 announcements at the moment.\nPull to retry.</string>
    <string name="ann_error">Can\'t update announcements at the moment.\nPull to retry.</string>

    <string name="login_help_student_id">Student ID: Your Student ID (Ex: 0612345)</string>
    <string name="login_help_old_e3">Old E3 password (Optional): The password you use when logging in ecampus (as figure
        below)\nURL: https://dcpc.nctu.edu.tw\nIf you never change it manually, the password should be same as NCTU
        Course Registration System　(The default password for Course System is the last 6 digits of your National ID or
        "123456").
    </string>
    <string name="login_help_new_e3">Portal password: The password you use when logging in NYCU Portal (as figure
        below)\nURL: https://portal.nycu.edu.tw
    </string>

    <string name="warning">Warning</string>
    <string name="course_not_found_in_db">Course not found in local database, please refresh in course list page
    </string>

    <string name="modified_time">Modified:</string>

    <string name="click_to_agree_site_policy">Click here to goto new E3 and agree with their site policy</string>
    <string name="no_course_or_site_policy">You have no course or you have not agreed with New E3\'s site policy
    </string>

    <string-array name="pref_home_screen_entry_count_array">
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>


    <!--Settings-->
    <string name="home_screen_options">Home Screen Options</string>
    <string name="home_enable_ann_summary">Show announcements on home screen</string>
    <string name="home_enable_ann_title">Announcements</string>
    <string name="home_ann_cnt">Announcements count</string>
    <string name="home_enable_download_summary">Show download history on home screen</string>
    <string name="home_enable_download_title">Download history</string>
    <string name="home_download_cnt">Download history count</string>
    <string name="home_enable_bookmarked_summary">Show bookmarked courses on home screen</string>
    <string name="home_enable_bookmarked_title">Bookmarked courses</string>
    <string name="home_bookmarked_cnt">Bookmarked courses entries count</string>
    <string name="ann_enable_new_e3_system_title">System announcements</string>
    <string name="ann_enable_new_e3_system_sum">Show new e3\'s system announcements</string>
    <string name="ann_enable_old_e3_title">Fetch announcements</string>
    <string name="ann_enable_old_e3_sum">Fetch old e3 announcements</string>
    <string name="general">General</string>
    <string name="night_mode">Night Mode</string>

    <string-array name="pref_night_mode_entries_array">
        <item>On</item>
        <item>Off</item>
    </string-array>

    <string-array name="pref_night_mode_entry_values_array">
        <item>MODE_NIGHT_YES</item>
        <item>MODE_NIGHT_NO</item>
    </string-array>

    <string name="open_link_in">Open Link in</string>
    <string-array name="open_link_in_entries_array">
        <item>Chrome Custom Tabs</item>
        <item>Default Browser</item>
    </string-array>
    <string-array name="open_link_in_entry_values_array">
        <item>CUSTOM_TAB</item>
        <item>DEFAULT</item>
    </string-array>

    <string name="account_management">Account management</string>
    <string name="timetable_menu_edit">Edit</string>
    <string name="timetable_menu_show_weekend">Show weekend</string>
    <string name="edit">Edit</string>
</resources>
