<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group
            android:id="@+id/nav_menu_first"
            android:checkableBehavior="single">
        <item
                android:id="@+id/nav_home"
                android:icon="@drawable/ic_home_black_24dp"
                android:title="@string/home"/>
        <item
                android:id="@+id/nav_ann"
                android:icon="@drawable/ic_announcement_black_24dp"
                android:title="@string/title_activity_ann"/>
        <item
                android:id="@+id/nav_bookmarked"
                android:icon="@drawable/ic_bookmark_black_24dp"
                android:title="@string/bookmarked_courses"/>
        <item
                android:id="@+id/nav_download"
                android:icon="@drawable/ic_file_download_black_24dp"
                android:title="@string/download_history"/>
        <item
                android:id="@+id/nav_new_e3"
                android:icon="@drawable/ic_keyboard_arrow_right_black_24dp"
                android:title="@string/course_list"/>
        <item
                android:id="@+id/settings"
                android:icon="@drawable/ic_settings_black_24dp"
                android:title="@string/settings"/>
    </group>

    <group>
        <item
                android:id="@+id/nav_account_management"
                android:title="@string/account_management"/>
        <item
                android:id="@+id/nav_feedback"
                android:title="@string/feedback"/>
        <item
                android:id="@+id/nav_about"
                android:title="@string/license"/>
    </group>

</menu>
