<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/course_nav_ann"
        android:icon="@drawable/ic_announcement_black_24dp"
        android:title="@string/course_nav_ann" />

    <item
        android:id="@+id/course_nav_doc"
        android:icon="@drawable/ic_folder_black_24dp"
        android:title="@string/course_nav_doc" />

    <item
        android:id="@+id/course_nav_assignment"
        android:icon="@drawable/ic_assignment_black_24dp"
        android:title="@string/course_nav_assignment" />
    <item
        android:id="@+id/course_nav_score"
        android:icon="@drawable/ic_check_black_24dp"
        android:title="@string/course_nav_score" />
    <item
        android:id="@+id/course_nav_members"
        android:icon="@drawable/ic_people_black_24dp"
        android:title="@string/course_nav_members" />
</menu>
