<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:minWidth="1000dp"
            tools:context="com.team214.nctue4.login.LoginHelpFragment">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="8dp"
                android:paddingTop="8dp"
                android:text="@string/login_help"
                android:textSize="34sp"/>

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="8dp"
                android:paddingTop="8dp"
                android:text="@string/login_help_student_id"
                android:textSize="16sp"/>

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autoLink="all"
                android:paddingBottom="8dp"
                android:paddingTop="8dp"
                android:text="@string/login_help_new_e3"
                android:textSize="16sp"/>

        <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter"
                android:src="@drawable/portal_screenshot"/>

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autoLink="all"
                android:paddingBottom="8dp"
                android:paddingTop="8dp"
                android:text="@string/login_help_old_e3"
                android:textSize="16sp"/>

        <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter"
                android:src="@drawable/e3_screenshot"/>


    </LinearLayout>
</ScrollView>
