<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:paddingLeft="20dp"
              android:paddingRight="20dp"
              android:paddingBottom="16dp"
              tools:context="com.team214.nctue4.main.LicenseDialog">

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="20dp"
            android:paddingTop="16dp"
            android:text="@string/license"
            android:textSize="20sp"/>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="8dp">

        <ImageView
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:paddingEnd="8dp"
                app:srcCompat="@drawable/ic_font_awesome"/>

        <TextView
                android:id="@+id/font_awesome_license"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:autoLink="web"
                android:clickable="true"
                android:text="@string/font_awesome_license"/>
    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <ImageView
                android:layout_width="50dp"
                android:layout_height="match_parent"
                app:srcCompat="@drawable/ic_fox"
                android:paddingStart="3dp"
                android:paddingEnd="8dp"/>

        <TextView
                android:id="@+id/flat_icon_license"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:autoLink="web"
                android:clickable="true"
                android:text="@string/flat_icon_license"/>
    </LinearLayout>

</LinearLayout>
