<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="8dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="8dp"
    tools:context="com.team214.nctue4.main.DownloadDialog">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:id="@+id/download_delete"
            android:clickable="true"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:foreground="?android:attr/selectableItemBackground"
            android:gravity="center_vertical">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_delete_forever_black_24dp"
                android:tint="@color/md_grey_700" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:text="@string/delete" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:id="@+id/download_rename"
            android:clickable="true"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:foreground="?android:attr/selectableItemBackground"
            android:gravity="center_vertical">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_edit_black_24dp"
                android:tint="@color/md_grey_700" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:text="@string/rename" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:clickable="true"
            android:id="@+id/download_share"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:foreground="?android:attr/selectableItemBackground"
            android:gravity="center_vertical">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_share_black_24dp"
                android:tint="@color/md_grey_700" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:text="@string/share" />
        </LinearLayout>
    </LinearLayout>
</FrameLayout>
