<androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/home_swipe_refresh"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/homeBackground"
>

    <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                tools:context="com.team214.nycue4.main.HomeFragment">

            <!--ann-->
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:id="@+id/ann_layout"
                    android:visibility="gone"
            >
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:gravity="center"
                        android:text="@string/latest_ann"
                        android:textSize="18sp"/>

                <com.google.android.material.card.MaterialCardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        app:cardCornerRadius="8dp"
                        app:cardBackgroundColor="@color/floatingBackground">

                    <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                        <FrameLayout
                                android:id="@+id/home_ann"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"/>

                        <TextView
                                android:id="@+id/home_more_ann"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="?attr/selectableItemBackground"
                                android:clickable="true"
                                android:focusable="true"
                                android:focusableInTouchMode="false"
                                android:padding="4dp"
                                android:gravity="center"
                                android:text="@string/more_ann"
                                android:textSize="14sp"/>

                    </LinearLayout>
                </com.google.android.material.card.MaterialCardView>
            </LinearLayout>

            <!--download-->
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:id="@+id/download_layout"
                    android:visibility="gone"
            >
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:gravity="center"
                        android:text="@string/download_history"
                        android:textSize="18sp"/>

                <com.google.android.material.card.MaterialCardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        app:cardCornerRadius="8dp"
                        app:cardBackgroundColor="@color/floatingBackground">

                    <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                        <FrameLayout
                                android:id="@+id/home_download"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="-8dp"/>

                        <TextView
                                android:id="@+id/home_more_download"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="?attr/selectableItemBackground"
                                android:clickable="true"
                                android:focusable="true"
                                android:focusableInTouchMode="false"
                                android:gravity="center"
                                android:padding="4dp"
                                android:text="@string/more_download_history"
                                android:textSize="14sp"/>

                    </LinearLayout>
                </com.google.android.material.card.MaterialCardView>
            </LinearLayout>

            <!--bookmarked-->
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="gone"
                    android:id="@+id/bookmarked_layout"
            >
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:gravity="center"
                        android:text="@string/bookmarked_courses"
                        android:textSize="18sp"/>

                <com.google.android.material.card.MaterialCardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        app:cardCornerRadius="8dp"
                        app:cardBackgroundColor="@color/floatingBackground">

                    <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                        <FrameLayout
                                android:id="@+id/home_bookmarked"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"/>

                        <TextView
                                android:id="@+id/home_more_course"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="?attr/selectableItemBackground"
                                android:clickable="true"
                                android:focusable="true"
                                android:focusableInTouchMode="false"
                                android:gravity="center"
                                android:padding="4dp"
                                android:text="@string/more_bookmarked_course"
                                android:textSize="14sp"/>

                    </LinearLayout>
                </com.google.android.material.card.MaterialCardView>
            </LinearLayout>


        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>